Fix edit image overspill on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -191,6 +191,7 @@ nav {
 
 .edit-properties {
     max-height: 40em;
+    max-width: 100%;
     object-fit: cover;
     margin-bottom: 2rem;
 }
